# PseudoHarmonicInterpolation-Linux

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PseudoHarmonicSurface  README.md  TheTriangleProject  build.sh  cmake_install.cmake  geometry.hh  main.cpp  matrix3x3.cc  modifiedgordonwixomsurface.cpp  modifiedgordonwixomsurface.h  vector.cc
.history/: CMakeLists_20231203152155.txt  CMakeLists_20231203153919.txt  CMakeLists_20231203160019.txt  CMakeLists_20231203160030.txt  main_20231203152155.cpp  main_20231203152811.cpp  main_20231203152948.cpp  main_20231203153044.cpp  main_20231203153047.cpp  main_20231203153113.cpp  main_20231203153115.cpp  main_20231203153137.cpp  main_20231203153140.cpp  main_20231203153223.cpp  main_20231203153234.cpp  main_20231203153235.cpp  main_20231203153257.cpp  main_20231203153258.cpp  main_20231203153314.cpp  main_20231203153404.cpp  main_20231203153419.cpp  main_20231203153434.cpp  main_20231203153441.cpp  main_20231203153444.cpp  main_20231203153455.cpp  main_20231203153537.cpp  main_20231203153538.cpp  main_20231203153547.cpp  main_20231203153702.cpp  main_20231203154130.cpp  main_20231203154135.cpp  main_20231203154850.cpp  main_20231203155007.cpp  main_20231203155041.cpp  main_20231203155109.cpp  main_20231203155300.cpp  main_20231203155310.cpp  main_20231203155312.cpp  main_20231203155807.cpp  main_20231203155820.cpp  (+26 more)
triangle/: tricall
